--- a/index.html
+++ b/index.html
@@ -344,15 +344,15 @@
           </div>
         </div>
 
-        <!--  <div class="card reveal">
-                <div class="contact-icon">
+        <div class="card reveal number-card">
+            <div class="contact-icon">
                   <i class="fas fa-phone"></i>
-                </div>
-                <div class="info">
+            </div>
+            <div class="info">
                   <h3>Phone</h3>
-                  <span>+34566-839754</span>
-                </div>
-              </div> -->
+                  <span>+8801760159394</span>
+            </div>
+        </div> 
   
         <!-- Website Card -->
         <div class="card reveal website-card">
