--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
           </div>
           <div class="info">
             <h3>Address</h3>
-            <span>Jessore, Bangladesh</span>
+            <span>Jessore, Bangladesh - 7400</span>
           </div>
         </div>
   
